@@ -30,30 +30,54 @@
             <version>${junit-jupiter.version}</version>
             <scope>test</scope>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.acanx.util</groupId>-->
+<!--            <artifactId>incubator-core</artifactId>-->
+<!--            <version>${revision}</version>-->
+<!--            <scope>test</scope>-->
+<!--        </dependency>-->
+
+<!--        <dependency>-->
+<!--            <groupId>com.acanx.util</groupId>-->
+<!--            <artifactId>incubator-annotation</artifactId>-->
+<!--            <version>${revision}</version>-->
+<!--            <scope>test</scope>-->
+<!--        </dependency>-->
         <dependency>
-            <groupId>com.acanx.util</groupId>
-            <artifactId>incubator-core</artifactId>
+            <groupId>com.acanx.meta.model</groupId>
+            <artifactId>model-test</artifactId>
+            <version>0.5.8</version>
+        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.acanx.util</groupId>-->
+<!--            <artifactId>incubator-annotation</artifactId>-->
+<!--            <version>0.4.4</version>-->
+<!--            <scope>compile</scope>-->
+<!--        </dependency>-->
+        <dependency>
+            <groupId>com.acanx.util.annotation</groupId>
+            <artifactId>annotation-api</artifactId>
             <version>${revision}</version>
-            <scope>test</scope>
+            <scope>compile</scope>
         </dependency>
 
-        <dependency>
-            <groupId>com.acanx.util</groupId>
-            <artifactId>incubator-annotation</artifactId>
-            <version>${revision}</version>
-            <scope>test</scope>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.acanx.util</groupId>-->
+<!--            <artifactId>incubator-annotation</artifactId>-->
+<!--            <version>${revision}</version>-->
+<!--            <scope>test</scope>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>com.acanx.meta.model</groupId>
             <artifactId>model-test</artifactId>
             <version>${meta-open.version}</version>
         </dependency>
-        <dependency>
-            <groupId>com.acanx.util</groupId>
-            <artifactId>incubator-annotation</artifactId>
-            <version>${revision}</version>
-            <scope>compile</scope>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.acanx.util</groupId>-->
+<!--            <artifactId>incubator-annotation</artifactId>-->
+<!--            <version>${revision}</version>-->
+<!--            <scope>compile</scope>-->
+<!--        </dependency>-->
 
     </dependencies>
 
@@ -66,28 +90,27 @@
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
+                    <fork>true</fork>
                     <compilerArgs>
-                        <arg>--add-exports</arg>
-                        <arg>jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
-                        <arg>--add-exports</arg>
-                        <arg>jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
-                        <arg>--add-exports</arg>
-                        <arg>jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
-                        <arg>--add-exports</arg>
-                        <arg>jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
-                        <arg>--add-exports</arg>
-                        <arg>jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
-                        <arg>--add-exports</arg>
-                        <arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+                        <arg>-parameters</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
+                        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+                        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+                        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
                     </compilerArgs>
                     <annotationProcessors>
-                        <annotationProcessor>com.acanx.util.incubator.annotation.CopierProcessor</annotationProcessor>
+                        <annotationProcessor>com.acanx.module.annotation.processor.ast.CopierAstProcessor</annotationProcessor>
                     </annotationProcessors>
                     <generatedSourcesDirectory>${project.build.directory}/generated-sources/annotations</generatedSourcesDirectory>
                     <annotationProcessorPaths>
                         <path>
-                            <groupId>com.acanx.util</groupId>
-                            <artifactId>incubator-annotation</artifactId>
+                            <groupId>com.acanx.util.annotation</groupId>
+                            <artifactId>annotation-processor-ast</artifactId>
                             <version>${revision}</version>
                         </path>
                     </annotationProcessorPaths>
@@ -111,6 +134,16 @@
                             <charset>${project.build.sourceEncoding}</charset>
                             <encoding>${project.build.sourceEncoding}</encoding>
                             <docencoding>${project.build.sourceEncoding}</docencoding>
+                            <additionalJOptions combine.children="append">
+                                <additionalJOption>--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</additionalJOption>
+                                <additionalJOption>--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</additionalJOption>
+                                <additionalJOption>--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</additionalJOption>
+                                <additionalJOption>--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</additionalJOption>
+                                <additionalJOption>--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</additionalJOption>
+                                <additionalJOption>--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</additionalJOption>
+                                <additionalJOption>--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</additionalJOption>
+                            </additionalJOptions>
+                            <failOnError>false</failOnError>
                         </configuration>
                     </execution>
                 </executions>
